11.0.10
------
(RB=1001008)
Make check tasks incremental

11.0.9
------
(RB=991779)
Moving ChannelPoolManager sensors from ServiceName-based to be composed by Custom Prefix and Hash of transport properties

11.0.8
------
(RB=998274)
generateRestModel should be more strict about running

(RB=987245)
Fixed log message formatting in SimpleLoadBalancerState.

(RB=979967)
Add field aliases, field order, and include after support to PDL.
Fix PDSC to serialize include after fields if include was after fields in original schema declaration.

(RB=988572)
Surppress the warning message if quarantine is already enabled

(RB=993433)
Encode HttpOnly for cookies that are set with this flag.

(RB=992939)
Change the failure for request body parsing error to 400_BAD_REQUEST instead of 500 internal error. This is also consistent with the behavior for other argument builders.

11.0.7
------
(RB=982922)
Upgrade to Netty 4.1.6 and remove maxHeaderSize from Http2StreamCodecBuilder

11.0.6
------
(RB=976188)
Improved configurability of GenerateDataTemplateTask.

(RB=972736)
Add restModel jar generation to make gradle plugin consistent with sbt plugin.
Revised ResourceModelEncoder to fallback to ThreadContextClassLoader if idl cannot be located in the Class level class loader (this is needed in for play-on-gradle since the way class loader is setup for play-on-gradle in play, it only guarantees class are reachable via ThreadContextClassLoader).

(RB=975272)
Create new EntityStream when retrying StreamRequest in RetryClient

(RB=981603)
Fixed issue with GenerateDataTemplateTask introduced in 11.0.6

11.0.5
------
(RB=970594)
Fix StreamExecutionCallback.EventLoopConnector race condition.
(RB=973958)
Remove deprecated << operator in PegasusPlugin.
(RB=971445)
Cache DataTemplateUtil.getSchema.

11.0.4
------
(RB=966768)
Fix FileClassNameScanner to ignore hidden dot-files.

11.0.3
------
(RB=959468)
Provide a utility to perform semantic equality comparison for two pegasus objects.

(RB=958964)